comments made in application properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.application.name=ShoppingCartSpringBoot
+# local serverport
 server.port=8081
+
+# session timout limit in secs
 server.servlet.session.timeout=30s
